Fixing line spacing on marketing items

--- a/sass/_marketing-items.scss
+++ b/sass/_marketing-items.scss
@@ -97,7 +97,7 @@
   font-size: 1.2rem;
 
   p {
-    line-height: 1.25rem;
+    line-height: 1.75rem;
   }
 
   a {
